# norbert

./: .dependency-cruiser.cjs  .gitignore  CLAUDE.md  README.md  index.html  install.ps1  install.sh  local_install.sh  norbert-mockup-v5.html  norbert-product-spec.md  package-lock.json  package.json  pnpm-lock.yaml  refresh-taskbar-icon.sh  stryker.claude-otel.conf.json  stryker.config-cross-references-detection.conf.json  stryker.config-cross-references-history.conf.json  stryker.config-cross-references-reducer.conf.json  stryker.config-cross-references-resolver.conf.json  stryker.config-cross-references.conf.json  stryker.config-env-viewer.conf.json  stryker.config.mjs  stryker.mcp-server-discovery.conf.json  stryker.otel-first-metrics.conf.json  stryker.pm-v2.conf.json  stryker.session-time-filter.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.mutation.config-cross-references-detection.ts  vitest.mutation.config-cross-references-history.ts  vitest.mutation.config-cross-references-reducer.ts  vitest.mutation.config-cross-references-resolver.ts  vitest.mutation.config-cross-references.ts  vitest.mutation.config.ts  vitest.pm-v2.mutation.config.ts
.github/workflows/: build.yml  ci.yml  mutation.yml  release.yml
.nwave/: des-config.json
.nwave/des/: deliver-session.json  des-task-active  des-task-active-otel-first-metrics--  des-task-active-session-time-filter--01-01  des-task-active-session-time-filter--02-01
docs/: architecture.md  development.md  project-brief.md
docs/adrs/: ADR-001-architectural-style.md  ADR-001-modular-monolith-architecture.md  ADR-002-functional-leaning-typescript.md  ADR-002-technology-stack.md  ADR-003-database-design.md  ADR-003-nodejs-runtime.md  ADR-004-development-paradigm.md  ADR-004-fastify-server.md  ADR-005-distribution-strategy.md  ADR-005-svelte-dashboard.md  ADR-006-settings-merge-strategy.md  ADR-006-sqlite-storage.md  ADR-007-hook-based-data-capture.md  ADR-007-pm-v2-sidebar-detail-layout.md  ADR-007-two-phase-installation.md  ADR-008-github-actions-npm-publish.md  ADR-008-hook-receiver-startup-mechanism.md  ADR-008-per-session-category-time-series-buffers.md  ADR-009-aggregate-applicability-by-category.md  ADR-009-config-explorer-package-structure.md  ADR-009-remove-tauri-shell-plugin.md  ADR-010-canvas-hover-tooltip-architecture.md  ADR-010-picomatch-glob-matching.md  ADR-010-provider-abstraction-layer.md  ADR-011-gray-matter-yaml-frontmatter.md  ADR-011-plugin-loading-mechanism.md  ADR-012-multi-window-ipc-architecture.md  ADR-013-layout-persistence-format.md  ADR-014-plugin-sandbox-enforcement.md  ADR-015-usage-plugin-time-series-sampling.md  ADR-016-usage-plugin-pricing-model.md  ADR-017-usage-plugin-client-side-aggregation.md  ADR-018-config-plugin-single-ipc-command.md  ADR-019-config-plugin-frontend-parsing.md  ADR-020-config-plugin-markdown-rendering.md  ADR-021-notif-os-toast-delivery.md  ADR-022-notif-external-channel-delivery.md  ADR-023-notif-preference-persistence.md  ADR-024-notif-dispatch-architecture.md  ADR-025-notif-sound-system.md  (+25 more)
docs/design/: performance-monitor-aesthetics.html  performance-monitor-phosphor-prototype.html
docs/discovery/: performance-monitor-jobs.md
plugin/: .mcp.json  README.md
scripts/: postinstall-core.js  postinstall.js  release.sh
src/: App.tsx  main.tsx  scheduling.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/hook-receiver/: Cargo.toml  build.rs
src-tauri/hook-receiver/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: hook_receiver.rs  lib.rs  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/db/: metric_store.rs  mod.rs
src-tauri/src/adapters/otel/: metrics_parser.rs  mod.rs
src-tauri/src/adapters/providers/: claude_code.rs  mod.rs
src-tauri/src/adapters/settings/: mod.rs
src-tauri/src/domain/: mod.rs  phosphor_history.rs
src-tauri/src/ports/: mod.rs
tests/: setup.ts
(+924 files in other folders)
