[package]
name = "norbert"
version = "0.1.0"
description = "Local-first observability and configuration management for Claude Code"
authors = ["pmvanev"]
edition = "2021"

[lib]
name = "norbert_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "norbert"
path = "src/main.rs"

[[bin]]
name = "norbert-hook-receiver"
path = "src/hook_receiver.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
