[package]
name = "norbert"
version = "0.5.0"
description = "Local-first observability and configuration management for Claude Code"
authors = ["pmvanev"]
edition = "2021"
default-run = "norbert"

[lib]
name = "norbert_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "norbert"
path = "src/main.rs"

[workspace]
members = ["hook-receiver"]
# Ensure a bare `cargo build` (as used by local_install.sh and CI) builds
# both the main Tauri app AND the hook-receiver sidecar. Without this,
# Cargo would default to only the root package.
default-members = [".", "hook-receiver"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tray-icon = "0.21"
muda = "0.17"
png = "0.17"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
