[package]
name = "norbert-hook-receiver"
version = "0.5.0"
description = "Norbert Hook Receiver sidecar -- captures Claude Code hook and OTel events"
authors = ["pmvanev"]
edition = "2021"

[[bin]]
name = "norbert-hook-receiver"
path = "src/main.rs"

[build-dependencies]
tauri-winres = "0.3"

[dependencies]
norbert_lib = { path = "..", package = "norbert" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
tray-icon = "0.21"
muda = "0.17"
png = "0.17"
chrono = "0.4"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
